--- a/src/assets/style/froala-theme.css
+++ b/src/assets/style/froala-theme.css
@@ -984,8 +984,14 @@
 .froala-theme.fr-toolbar .fr-command.fr-btn svg,
 .froala-theme.fr-popup .fr-command.fr-btn svg {
   font-size: 14px;
-  width: 9px;
-  margin: 8px 8px;
+  width: 24px;
+  margin: 0;
+}
+
+.fr-toolbar .fr-command.fr-btn svg path, 
+.fr-popup .fr-command.fr-btn svg path, 
+.fr-modal .fr-command.fr-btn svg path {
+  fill:#828282
 }
 
 .froala-theme.fr-toolbar .fr-command.fr-btn span,
